--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,15 @@ jobs:
       - name: Generate signing keys
         run: |
           npm run tauri signer generate -- -w $env:USERPROFILE\.tauri\signing-key.key
-          echo "TAURI_SIGNING_PRIVATE_KEY=$(Get-Content $env:USERPROFILE\.tauri\signing-key.key -Raw)" >> $env:GITHUB_ENV
+          $privateKey = Get-Content $env:USERPROFILE\.tauri\signing-key.key -Raw
+          $publicKey = Get-Content "$env:USERPROFILE\.tauri\signing-key.key.pub" -Raw
+          echo "TAURI_SIGNING_PRIVATE_KEY=$privateKey" >> $env:GITHUB_ENV
+          
+          # Update pubkey in tauri.conf.json
+          $configPath = "src-tauri/tauri.conf.json"
+          $config = Get-Content $configPath -Raw
+          $config = $config -replace '"pubkey":\s*"[^"]*"', "`"pubkey`": `"$publicKey`""
+          Set-Content $configPath -Value $config -NoNewline
 
       - name: Build the app
         run: npm run tauri build
